--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4"
-  }
+  },
+  "name": "cs278-studdies",
+  "version": "1.0.0",
+  "description": "Studdies &lt;3",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
