--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
+  "name": "cs278-studdies",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^5.2.0"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4"
-  },
-  "name": "cs278-studdies",
-  "version": "1.0.0",
-  "description": "Studdies &lt;3",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
