--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.2.12"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.43.4"
+    "@supabase/supabase-js": "^2.43.4",
+    "bcryptjs": "^2.4.3"
   }
 }
